fix: SD-925 fixed message composer buttons on mobile, calls, disabled searchbar

--- a/src/app/pages/apps/chat/custom-message-composer/custom-message-composer.component.scss
+++ b/src/app/pages/apps/chat/custom-message-composer/custom-message-composer.component.scss
@@ -1,11 +1,10 @@
 // Voice Recorder Dropdown Styles
 .voice-recorder-dropdown-container {
-  position: relative;
+  position: absolute;
+  right: 1rem;
+  bottom: 2rem;
 }
 .voice-recorder-dropdown {
-  position: absolute;
-  bottom: 20px;
-  right: 0;
   background: #fff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 12px;
